hardstuck at color inherit bug

--- a/src/components/css/Input.css
+++ b/src/components/css/Input.css
@@ -15,7 +15,7 @@ form {
     border: 2px solid;
     border-color: rgb(95, 95, 95);
     background-color: rgb(36, 36, 36);
-    color: rgb(95, 95, 95);;
+    color: rgb(95, 95, 95);
   
     text-align: center;
   }
