--- a/src/components/css/Websites.css
+++ b/src/components/css/Websites.css
@@ -2,7 +2,7 @@
     font-weight:600;
   }
 /*Website category*/
-ul{
+.unlisted{
     display:table-cell;
     text-align:center; 
     height: 100%;
@@ -11,13 +11,12 @@ ul{
     transition: all 0.5s;
     cursor:default;
     list-style-type: none;
-    
-    border-color: rgb(48, 48, 48);
+    border-color:inherit;
     border-style: solid;
     border-width: 0px 1px 0px 1px;
   }
   /*Hovering on the entire category*/
-  ul:hover{
+  .unlisted:hover{
     border-width: 0px 1px 0px 1px;
     border-right-style: solid;
     border-left-style:solid;
@@ -34,56 +33,56 @@ p{
 
   
 /*Hovering on the websites pinned in each category*/
-ul[class=entertainment]:hover{
+.unlisted[class=entertainment]:hover{
     color:rgb(255, 98, 98);
     border-color:rgb(255, 98, 98);
   }
   
-  ul[class=entertainment] > li> a:hover {
+  .unlisted[class=entertainment] > li> a:hover {
     color:rgb(199, 0, 0);
     transition: 1s;
   }
   
   
-  ul[class=social]:hover{
+  .unlisted[class=social]:hover{
     color:rgb(50, 223, 107);
     border-color:rgb(50, 223, 107);
   }
   
-  ul[class=social] > li> a:hover {
+  .unlisted[class=social] > li> a:hover {
     color:rgb(0, 168, 56);
     transition: 1s;
   }
   
-  ul[class=music]:hover{
+  .unlisted[class=music]:hover{
     color: rgb(70, 202, 255);
     border-color:rgb(70, 202, 255);
   }
   
-  ul[class=music] > li> a:hover {
+  .unlisted[class=music] > li> a:hover {
     color:rgb(25, 163, 218);
     transition: 1s;
   }
   
-  ul[class=Reddit]:hover{
+  .unlisted[class=Reddit]:hover{
     color: rgb(195, 91, 255);
     border-color:rgb(195, 91, 255);
   }
   
-  ul[class=Reddit] > li> a:hover {
+  .unlisted[class=Reddit] > li> a:hover {
     color:rgb(138, 9, 212);
     transition: 1s;
   }
   
   
-  ul[class=chan]:hover{
+  .unlisted[class=chan]:hover{
     color: rgb(75, 255, 105);
     border-color:rgb(75, 255, 105);
   
   }
   
   
-  ul[class=chan] > li> a:hover {
+  .unlisted[class=chan] > li> a:hover {
     color:rgb(0, 199, 33);
     transition: 1s;
     
